# USTC-Parallel-Computing-Course

./: .gitignore  CMakeLists.txt  exp1.cpp  exp2.cpp  exp3.cpp  exp4.cpp  lab1.cpp
doc/: lab1.md  lab2.md  lab3.md  lab4.md
src/lab1/: pi-mpi.cpp  pi-omp.cpp  prime-mpi.cpp  prime-omp.cpp
src/lab2/: lab2.cpp
src/lab3/: lab3.cpp
src/lab4/: lab4.cpp
test/: test.py
