cmake_minimum_required(VERSION 3.14)
project(USTC_Parallel_Computing_Course)

find_package(OpenMP REQUIRED)
find_package(MPI REQUIRED)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_COMPILER mpicxx)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")

add_executable(lab1-pi-mpi src/lab1/pi-mpi.cpp)
add_executable(lab1-pi-omp src/lab1/pi-omp.cpp)
add_executable(lab1-prime-mpi src/lab1/prime-mpi.cpp)
add_executable(lab1-prime-omp src/lab1/prime-omp.cpp)
add_executable(lab2 src/lab2/lab2.cpp)
add_executable(lab3 src/lab3/lab3.cpp)
add_executable(lab4 src/lab4/lab4.cpp)

target_link_libraries(lab1-pi-mpi ${MPI_CXX_LIBRARIES})
target_link_libraries(lab1-pi-omp PUBLIC OpenMP::OpenMP_CXX)
target_link_libraries(lab1-prime-mpi ${MPI_CXX_LIBRARIES})
target_link_libraries(lab1-prime-omp PUBLIC OpenMP::OpenMP_CXX)
target_link_libraries(lab2 PUBLIC OpenMP::OpenMP_CXX ${MPI_CXX_LIBRARIES})
target_link_libraries(lab3 PUBLIC OpenMP::OpenMP_CXX ${MPI_CXX_LIBRARIES})
target_link_libraries(lab4 PUBLIC OpenMP::OpenMP_CXX ${MPI_CXX_LIBRARIES})
